Wed Mar 14 14:05:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * bin/tao_orb_tests.lst
          ZIOP config removed since ZIOP now built by default.

Tue Mar 13 20:44:11 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_valuetype(has_supported_op):

          Fixed typo in IF block termination check. Thanks to
          Michael Frommberger <michael dot frommberger at gmx
          dot net> for reporting the oversight.

Tue Mar 13 18:50:38 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/orbsvcs/CosNotifyFilterExt.idl:
        * orbsvcs/tests/Notify/Basic/ExtendedFilter.cpp:
        * orbsvcs/tests/Notify/Basic/ExtendedFilter.h:

          Fixed fuzz and unused variable warnings on optimized builds.

Tue Mar 13 16:50:37 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_commponent.cpp(scan):

          Modified be_component::scan() to check the component's
          supported interfaces (if any). They will have no ports,
          but the presence of one or more read/write attributes
          will trigger the generation of the servant's set_attribute()
          method, which was incorrectly getting skipped if the component
          itself had no attributes. Thanks to Michael Frommberger
          <michael dot frommberger at gmx dot net> for reporting
          the problem.

Mon Mar 12 20:47:27 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/orbsvcs/CosNotification.mpc:
        * orbsvcs/orbsvcs/CosNotifyFilterExt.idl:

          Added an extension of the CosNotifyFilter::FilterFactory
          to allow removal of filter created by the factory.  The extension
          also has getters for existing filters and ids.

        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.cpp:
        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.h:

          Converted TAO_Notify_ETCL_FilterFactory to implement
          the extended FilterFactory type.
